--- a/minesolver/package.json
+++ b/minesolver/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@mantine/core": "^5.5.1",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +15,10 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.3.0-next-2d80a0cd6-20221003",
     "react-dom": "^18.3.0-next-2d80a0cd6-20221003",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
